--- a/CasaDoCodigo/Views/Pedido/BuscaProdutos.cshtml
+++ b/CasaDoCodigo/Views/Pedido/BuscaProdutos.cshtml
@@ -2,39 +2,41 @@
     ViewData["Title"] = "Busca Produtos";
 }
 
-@model List<ListaProdutosViewModel>
+@model BuscaProdutosViewModel
 
 <div class="container">
     <div class="row">
         <div class="col-md-4">
             <h2>Buscar produtos</h2>
-            <div id="custom-search-input">
-                <div class="input-group col-md-12">
-                    <input type="text" name="pesquisa" class="form-control input-lg" placeholder="categoria ou produto" id="Pesquisa" value="" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-info btn-lg" type="submit">
-                            <i class="glyphicon glyphicon-search"></i>
-                        </button>
-                    </span>
+            <form asp-action="BuscaProdutos" method="post">
+                <div id="custom-search-input">
+                    <div class="input-group col-md-12">
+                        <input type="search" class="form-control input-lg" placeholder="categoria ou produto" asp-for="@Model.Pesquisa" name="Pesquisa" id="Pesquisa"/>
+                        <span class="input-group-btn">
+                            <button class="btn btn-info btn-lg" type="submit">
+                                <i class="glyphicon glyphicon-search"></i>
+                            </button>
+                        </span>
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
 
 
-@foreach (var ListaProdutos in Model)
+@foreach (var Categorias in Model.Produtos)
 {
-    <h3>@ListaProdutos.NomeCategoria</h3>
+    <h3>@Categorias.First().Categoria?.Nome</h3>
 
-    <div id="my-carousel-@ListaProdutos.NomeCategoria?.GetHashCode()" class="carousel slide" data-ride="carousel">
+    <div id="my-carousel-@Categorias.First().Categoria?.Nome?.GetHashCode()" class="carousel slide" data-ride="carousel">
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
 
             @{
                 const int TAMANHO_PAGINA = 4;
 
-                int paginas = (int)Math.Ceiling((double)ListaProdutos.Produtos.Count() / TAMANHO_PAGINA);
+                int paginas = (int)Math.Ceiling((double)Categorias.Count() / TAMANHO_PAGINA);
             }
 
             @for (int pagina = 0; pagina < paginas; pagina++)
@@ -44,7 +46,7 @@
                     <div class="row">
 
                         @{
-                            var produtosDaPagina = ListaProdutos.Produtos.Skip(pagina * TAMANHO_PAGINA).Take(TAMANHO_PAGINA);
+                            var produtosDaPagina = Categorias.Skip(pagina * TAMANHO_PAGINA).Take(TAMANHO_PAGINA);
                         }
 
                         @foreach (var produto in produtosDaPagina)
@@ -75,13 +77,17 @@
         </div>
 
         <!-- Controls -->
-        <a class="left carousel-control" href="#my-carousel-@ListaProdutos.NomeCategoria?.GetHashCode()" role="button" data-slide="prev">
+        <a class="left carousel-control" href="#my-carousel-@Categorias.First().Categoria?.Nome?.GetHashCode()" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#my-carousel-@ListaProdutos.NomeCategoria?.GetHashCode()" role="button" data-slide="next">
+        <a class="right carousel-control" href="#my-carousel-@Categorias.First().Categoria?.Nome?.GetHashCode()" role="button" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
+}
+@if(!Model.Produtos.Any())
+{
+    <h3>Nenhum produto encontrado</h3>
 }
