--- a/CasaDoCodigo/Views/Pedido/Cadastro.cshtml
+++ b/CasaDoCodigo/Views/Pedido/Cadastro.cshtml
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="form-group">
-                    <a class="btn btn-success" asp-action="carrossel">
+                    <a class="btn btn-success" asp-action="BuscaProdutos">
                         Continuar Comprando
                     </a>
                 </div>
